src/test/ui/consts/control-flow/interior-mutability.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/interior-mutability.rs:25:26
   |
LL |     let x: &'static _ = &X;
   |            ----------    ^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL |     let y: &'static _ = &Y;
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/interior-mutability.rs:26:26
   |
LL |     let y: &'static _ = &Y;
   |            ----------    ^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0716`.
